<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity"
    android:background="@drawable/background_register">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bold"
        android:text="@string/register_header"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/emailEditTextId"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/emailEditTextId"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.773" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:fontFamily="@font/thin"
        android:text="@string/existing_user"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.16"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/loginTextViewOnRegisterScreenId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="124dp"
        android:fontFamily="@font/regular"
        android:text="@string/login"
        android:textColor="@color/dark_green"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.179"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditTextId"
        app:layout_constraintVertical_bias="0.897" />



    <EditText
        android:id="@+id/emailEditTextId"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="@drawable/input_field"
        android:ems="10"
        android:hint="@string/asking_email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/passwordEditTextId"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.439"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.915"
        />

    <EditText
        android:id="@+id/passwordEditTextId"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginBottom="412dp"
        android:background="@drawable/input_field"
        android:ems="10"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.439"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/passwordConfirmEditTextId"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginBottom="340dp"
        android:background="@drawable/input_field"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.441"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/registerButtonId"
        android:layout_width="150dp"
        android:layout_height="53dp"
        android:layout_marginEnd="60dp"
        android:background="@drawable/button"

        android:fontFamily="@font/regular"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textColor="#ffff"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/passwordEditTextId"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditTextId"
        app:layout_constraintVertical_bias="0.306" />

    <ImageView
        android:id="@+id/backButtonId"
        android:layout_width="27dp"
        android:layout_height="37dp"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.465"
        app:srcCompat="@drawable/backsign"

        android:contentDescription="@string/backbutton_description"/>


    <ProgressBar
        android:id="@+id/signUpProgressBarId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/loginTextViewOnRegisterScreenId"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@+id/passwordConfirmEditTextId" />

</androidx.constraintlayout.widget.ConstraintLayout>