<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@drawable/background_login">


    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bold"
        android:text="@string/login_header"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/emailEditTextId"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/emailEditTextId"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.773" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:fontFamily="@font/thin"
        android:text="@string/new_user"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.16"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/registerTextViewOnLoginScreenId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="124dp"
        android:fontFamily="@font/regular"
        android:text="@string/register"
        android:textColor="@color/dark_green"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.179"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditTextId"
        app:layout_constraintVertical_bias="0.897" />

    <TextView
        android:id="@+id/needHelpId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/regular"
        android:text="Forgot Password"
        android:textColor="@color/dark_green"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.39"
        app:layout_constraintStart_toEndOf="@+id/loginButtonId"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditTextId"
        app:layout_constraintVertical_bias="0.089" />

    <EditText
        android:id="@+id/emailEditTextId"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="@drawable/input_field"
        android:ems="10"
        android:hint="@string/asking_email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/passwordEditTextId"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.439"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.915" />

    <EditText
        android:id="@+id/passwordEditTextId"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginBottom="412dp"
        android:background="@drawable/input_field"
        android:ems="10"
        android:hint="@string/asking_login_password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.439"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/loginButtonId"
        android:layout_width="150dp"
        android:layout_height="53dp"
        android:layout_marginEnd="60dp"
        android:background="@drawable/button"

        android:fontFamily="@font/regular"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="#ffff"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/passwordEditTextId"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditTextId"
        app:layout_constraintVertical_bias="0.067" />

    <ImageView
        android:id="@+id/backButtonId"
        android:layout_width="27dp"
        android:layout_height="37dp"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.465"
        app:srcCompat="@drawable/backsign"
        android:contentDescription="@string/backbutton_description"/>

    <ProgressBar
        android:id="@+id/loginProgressBarId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/registerTextViewOnLoginScreenId"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditTextId" />


</androidx.constraintlayout.widget.ConstraintLayout>